--- a/charts/filebeat/values.yaml
+++ b/charts/filebeat/values.yaml
@@ -88,6 +88,7 @@ filebeatConfig:
         type: ${LOGZIO_TYPE}
       fields_under_root: ${FIELDS_UNDER_ROOT}
       ignore_older: ${IGNORE_OLDER}
+      registry_file: /var/lib/filebeat/registry
       output:
         logstash:
           hosts: ["${LOGZIO_LOGS_LISTENER_HOST}:5015"]
