--- a/charts/filebeat/values.yaml
+++ b/charts/filebeat/values.yaml
@@ -133,7 +133,7 @@ filebeatConfig:
             when:
               and:
                 - contains:
-                  message: "*argocd*"
+                  message: "kubernetes"
 
         - drop_event:
             when:
