fix add kubernetes namespace filter

--- a/charts/filebeat/values.yaml
+++ b/charts/filebeat/values.yaml
@@ -133,7 +133,11 @@ filebeatConfig:
             when:
               and:
                 - contains:
-                    message: "kubernetes"
+                    kubernetes.namespace: argocd
+                - contains:
+                    kubernetes.namespace: argocd-rollouts
+                - contains:
+                    kubernetes.namespace: kube-system
 
         - drop_event:
             when:
