--- a/charts/filebeat/values.yaml
+++ b/charts/filebeat/values.yaml
@@ -93,6 +93,7 @@ filebeatConfig:
                 - from: log.file.path
                   to: source
               ignore_missing: true
+          # Drop ECS Logging Agent
           - drop_event:
               when:
                 or:
@@ -100,15 +101,27 @@ filebeatConfig:
                       container.name: filebeat
                   - contains:
                       container.name: ecs-agent
+          # Drop K8S Logging Agent
+          - drop_event:
+              when:
+                or:
+                  - equals:
+                      kubernetes.namespace: filebeat
+          # Drop PID Events (K8S and ECS)
           - drop_event:
               when:
                 or:
                   - contains:
                       message: "PID"
                   - contains:
+                      message: "pid"
+                  - contains:
                       messsage: "IP 127.0.0.1"
                   - contains:
                       message: "ping provider status:200"
+                  - contains:
+                      message: "ping provider status:401"
+          # Drop Health Checks
           - drop_event:
               when:
                 or:
@@ -126,7 +139,22 @@ filebeatConfig:
                       message: "Healthcheck"
                   - contains:
                       message: "Health check"
-
+                  - contains:
+                      message: "Health Check"
+                  - contains:
+                      message: "health-check"
+                  - contains:
+                      message: "/health"
+                  - contains:
+                      message: "HealthModule dependencies initialized"
+                  - contains:
+                      message: "HealthModule"
+          # Drop Atlantis
+          - drop_event:
+              when:
+                - equals:
+                    kubernetes.namespace: atlantis
+          # Drop Unuseful K8S Info
           - drop_event:
               when:
                 or:
@@ -144,8 +172,6 @@ filebeatConfig:
                       kubernetes.namespace: external-dns
                   - equals:
                       kubernetes.namespace: external-secrets
-                  - equals:
-                      kubernetes.namespace: filebeat
                   - equals:
                       kubernetes.namespace: flagger-system
                   - equals:
@@ -168,7 +194,7 @@ filebeatConfig:
                       kubernetes.namespace: newrelic
                   - equals:
                       kubernetes.namespace: ingress-nginx
-
+          # Drop BB Worker ECS
           - drop_event:
               when:
                 and:
@@ -183,7 +209,110 @@ filebeatConfig:
                           message: "InstantPaymentConfirmationSQSPort"
                       - contains:
                           message: "requeuing"
-
+          # Drop BB Worker K8S
+          - drop_event:
+            when:
+              and:
+                - contains:
+                    kubernetes.container.name: bb-adapter-worker
+                - or:
+                    - contains:
+                        message: "called method"
+                    - contains:
+                        message: "external request"
+                    - contains:
+                        message: "InstantPaymentConfirmationSQSPort"
+                    - contains:
+                        message: "requeuing"
+          # Drop Filters Logz.io (Dev)
+          # - drop_event:
+          #   when:
+          #     and:
+          #      - contains:
+          #         kubernetes.container.name: transactions-worker-dev
+          #      - or:
+          #          - equals:
+          #             SeverityText: DEBUG
+          #          - equals:
+          #             SeverityText: ERROR
+          - drop_event:
+            when:
+              and:
+                - contains:
+                    kubernetes.container.name: transactions-dev
+                - equals:
+                    SeverityText: DEBUG
+          - drop_event:
+            when:
+              and:
+                - contains:
+                    kubernetes.container.name: webhooks-nt-dev
+                - or:
+                    - equals:
+                        SeverityText: INFO
+                    - equals:
+                        SeverityText: DEBUG
+          - drop_event:
+            when:
+              and:
+                - contains:
+                    cluster: dev
+              or:
+                  # - equals:
+                  #     SeverityText: INFO
+                  # - equals:
+                  #     SeverityText: DEBUG
+                  - equals:
+                      SeverityText: TRACE
+                  # - equals:
+                  #     SeverityText: ERROR
+          # Drop Filters Logzio (Prod)
+          - drop_event:
+            when:
+              or:
+                - equals:
+                    Body: 'check: start method'
+                - equals:
+                    Body: 'check: end method'
+          # - drop_event:
+          #   when:
+          #     and:
+          #       - equals:
+          #           type: tokenization-prod
+          #       or:
+          #         - equals:
+          #             SeverityText: TRACE
+          #         - equals:
+          #             SeverityText: DEBUG
+          # - drop_event:
+          #   when:
+          #     and:
+          #       - equals:
+          #           type: cards-prod
+          #       - equals:
+          #           SeverityText: TRACE
+          - drop_event:
+              when:
+                or:
+                  - equals:
+                      type: vtex-adapter-prod
+                  - equals:
+                      type: transactions-router-prod
+          # - drop_event:
+          #   when:
+          #     and:
+          #       - equals:
+          #           type: cards-prod
+          #       or:
+          #         - equals:
+          #             SeverityText: TRACE
+          - drop_event:
+            when:
+              or:
+                - equals:
+                    message: Provider Not Found Exception
+                - contains:
+                    meessage: 'findProvidersByMerchantIdWithParams() ProviderNotFoundException'
       fields:
         logzio_codec: ${LOGZIO_CODEC}
         token: ${LOGZIO_LOGS_SHIPPING_TOKEN}
