add drop filters

--- a/charts/filebeat/values.yaml
+++ b/charts/filebeat/values.yaml
@@ -291,6 +291,13 @@ filebeatConfig:
           #           type: cards-prod
           #       - equals:
           #           SeverityText: TRACE
+          # - drop_event:
+          #   when:
+          #     and:
+          #       - equals:
+          #           type: webhooks-nt-prod
+          #       - equals:
+          #           SeverityText: TRACE
           - drop_event:
               when:
                 or:
