--- a/charts/filebeat/prod/values.yaml
+++ b/charts/filebeat/prod/values.yaml
@@ -267,6 +267,15 @@ filebeatConfig:
                     message: Provider Not Found Exception
                 - contains:
                     meessage: 'findProvidersByMerchantIdWithParams() ProviderNotFoundException'
+          # Unecessary log fields.
+          # Container info
+          - drop_fields:
+              fields: ["container.id", "container.image.name", "container.runtime", "input.type"]
+              ignore_missing: true
+          # Kubernetes info
+          - drop_fields:
+              fields: ["kubernetes.labels.app_kubernetes_io/instance", "kubernetes.labels.app_kubernetes_io/name", "kubernetes.labels.pod-template-hash", "kubernetes.namespace_labels.kubernetes_io/metadata_name", "kubernetes.namespace_uid", "kubernetes.node.labels.beta_kubernetes_io/arch", "kubernetes.node.labels.beta_kubernetes_io/instance-type", "kubernetes.node.labels.beta_kubernetes_io/os", "kubernetes.node.labels.eks_amazonaws_com/nodegroup-image", "kubernetes.node.labels.eks_amazonaws_com/sourceLaunchTemplateId", "kubernetes.node.labels.eks_amazonaws_com/sourceLaunchTemplateVersion", "kubernetes.node.labels.k8s_io/cloud-provider-aws", "kubernetes.node.labels.kubernetes_io/arch", "kubernetes.node.labels.kubernetes_io/hostname", "kubernetes.node.labels.kubernetes_io/os", "kubernetes.node.labels.eks_amazonaws_com/capacityType", "kubernetes.node.labels.topology_ebs_csi_aws_com/zone", "kubernetes.node.labels.failure-domain_beta_kubernetes_io/region", "kubernetes.node.labels.failure-domain_beta_kubernetes_io/zone", "kubernetes.node.hostname", "kubernetes.node.uid", "kubernetes.pod.ip", "kubernetes.pod.uid", "kubernetes.replicaset.name"]
+              ignore_missing: true
       fields:
         logzio_codec: ${LOGZIO_CODEC}
         token: ${LOGZIO_LOGS_SHIPPING_TOKEN}
