--- a/charts/filebeat/dev/values.yaml
+++ b/charts/filebeat/dev/values.yaml
@@ -78,12 +78,9 @@ filebeatConfig:
         json.keys_under_root: true
         json.add_error_key: true
         processors:
-          - convert:
-              fields:
-                - {from: 'message', type: 'string'}
           - decode_json_fields:
               fields: ['message']
-              target: 'json'
+              target: 'message'
               overwirte_keys: true
           - add_kubernetes_metadata:
               host: ${NODE_NAME}
