--- a/charts/filebeat/dev/values.yaml
+++ b/charts/filebeat/dev/values.yaml
@@ -75,9 +75,10 @@ filebeatConfig:
           - /var/lib/docker/containers/*/*.log
         exclude_files:
           - /var/lib/docker/containers/.*/container-cached.log
-        json.keys_under_root: true
-        json.add_error_key: true
         processors:
+          - decode_json_fields:
+              fields: ['message']
+              target: 'message'
           - add_kubernetes_metadata:
               host: ${NODE_NAME}
               matchers:
