New Indexing Attempt

--- a/charts/filebeat/dev/values.yaml
+++ b/charts/filebeat/dev/values.yaml
@@ -75,6 +75,9 @@ filebeatConfig:
           - /var/lib/docker/containers/*/*.log
         exclude_files:
           - /var/lib/docker/containers/.*/container-cached.log
+            json.keys_under_root: true
+            json.add_error_key: true
+            json.message_key: "Message"
         processors:
           - add_kubernetes_metadata:
               host: ${NODE_NAME}
