Add Decode JSON Fields

--- a/charts/filebeat/prod/values.yaml
+++ b/charts/filebeat/prod/values.yaml
@@ -76,6 +76,8 @@ filebeatConfig:
         exclude_files:
           - /var/lib/docker/containers/.*/container-cached.log
         processors:
+          - decode_json_fields:
+              fields: ["message"]
           - add_kubernetes_metadata:
               host: ${NODE_NAME}
               matchers:
