--- a/charts/filebeat/prod/values.yaml
+++ b/charts/filebeat/prod/values.yaml
@@ -76,6 +76,10 @@ filebeatConfig:
         exclude_files:
           - /var/lib/docker/containers/.*/container-cached.log
         processors:
+          - convert:
+              fields:
+                - {from: "message", to: "message", type: "string"}
+              ignore_missing: true
           - decode_json_fields:
               fields: ["message"]
           - add_kubernetes_metadata:
