--- a/charts/filebeat/dev/values.yaml
+++ b/charts/filebeat/dev/values.yaml
@@ -1,4 +1,4 @@
-image: docker.elastic.co/beats/filebeat
+rimage: docker.elastic.co/beats/filebeat
 imageTag: 7.13.2
 nameOverride: ""
 namespaceOverride: ""
@@ -272,7 +272,7 @@ filebeatConfig:
           - dissect:
               tokenizer: "%{container.image.name}:%{container.image.version}"
               field: "container.image.name"
-              target_prefix: ""
+              target_prefix: "ecr"
       fields:
         logzio_codec: ${LOGZIO_CODEC}
         token: ${LOGZIO_LOGS_SHIPPING_TOKEN}
