--- a/charts/filebeat/prod/values.yaml
+++ b/charts/filebeat/prod/values.yaml
@@ -256,8 +256,8 @@ filebeatConfig:
           - drop_event:
               when:
                 or:
-                  - equals:
-                      kubernetes.container.name: vtex-adapter-prod
+                  # - equals:
+                  #     kubernetes.container.name: vtex-adapter-prod
                   - equals:
                       kubernetes.container.name: transactions-router-prod
           - drop_event:
