--- a/charts/filebeat/prod/values.yaml
+++ b/charts/filebeat/prod/values.yaml
@@ -255,8 +255,10 @@ filebeatConfig:
           #             SeverityText: TRACE
           - drop_event:
               when:
-                - equals:
-                    kubernetes.container.name: transactions-router-prod
+              # - equals:
+              #     kubernetes.container.name: vtex-adapter-prod
+                equals:
+                  kubernetes.container.name: transactions-router-prod
           - drop_event:
               when:
                 or:
