Update Vtex Drop Filter

--- a/charts/filebeat/prod/values.yaml
+++ b/charts/filebeat/prod/values.yaml
@@ -259,6 +259,13 @@ filebeatConfig:
                   kubernetes.container.name: transactions-router-prod
           - drop_event:
               when:
+                and:
+                  - equals:
+                      kubernetes.container.name: vtex-adapter-prod
+                  - contains:
+                      message: 'discarding message'
+          - drop_event:
+              when:
                 or:
                   - equals:
                       message: Provider Not Found Exception
