Update Drop Filters

--- a/charts/filebeat/prod/values.yaml
+++ b/charts/filebeat/prod/values.yaml
@@ -263,7 +263,7 @@ filebeatConfig:
                   - equals:
                       kubernetes.container.name: vtex-adapter-prod
                   - contains:
-                      message: 'discarding message'
+                      Body: 'discarding message'
           - drop_event:
               when:
                 or:
