--- a/charts/filebeat/prod/values.yaml
+++ b/charts/filebeat/prod/values.yaml
@@ -96,8 +96,14 @@ filebeatConfig:
           # Drop VTex Unuseful Logs
           - drop_event:
               when:
-                equals:
-                  kubernetes.container.name: vtex-adapter-prod
+                and:
+                  equals:
+                    kubernetes.container.name: vtex-adapter-prod
+                  or:
+                    contains:
+                      message: '''\"Body\":\"discarding message\"'''
+                    contains:
+                      message: '''"SeverityText":"TRACE"'''
           # Drop ECS Logging Agent
           - drop_event:
               when:
