--- a/charts/filebeat/prod/values.yaml
+++ b/charts/filebeat/prod/values.yaml
@@ -101,9 +101,9 @@ filebeatConfig:
                     kubernetes.container.name: vtex-adapter-prod
                   or:
                     contains:
-                      message: '''\"Body\":\"discarding message\"'''
+                      message: '\"Body\":\"discarding message\"'
                     contains:
-                      message: '''"SeverityText":"TRACE"'''
+                      message: '"SeverityText":"TRACE"'
           # Drop ECS Logging Agent
           - drop_event:
               when:
