--- a/charts/filebeat/prod/values.yaml
+++ b/charts/filebeat/prod/values.yaml
@@ -276,6 +276,41 @@ filebeatConfig:
           - drop_fields:
               fields: ["container.image.name"]
               ignore_missing: true
+          # Filter sensitive data
+          - script:
+              lang: javascript
+              source: >
+                var regexCredentials = /(?:\\"credentials\\"):({\\.*?type.*?})|(?:"credentials"):({.*?type.*?})|(?:\\\\"credentials\\\\"):({.*?type.*?})/gi;
+                var regexCreditCard = /\b(?:\d[ -]*?){13,16}\b/g;
+                var regexCvv = /(cvv|cvc|csc|cid|cvn|cve|cvp2).+?(\b\d{3,4}\b)/gi;
+                var regexExpirationDate = /(expirationdate|expiration|expdate)\\":\\"(\d{2})\/(\d{4})/gi;
+
+                function process(event) {
+                    var msg = event.Get("message");
+                    msg = msg.replace(regexCreditCard, 'mask_card');
+                    msg = msg.replace(regexExpirationDate, "$1\": \"$2/mask_date");
+
+                    var matchCvv = regexCvv.exec(msg);
+                    if (matchCvv) {
+                        var maskCvvValue = matchCvv[0].replace(matchCvv[2], 'mask_cvv');
+                        msg = (msg.replace(matchCvv[0], maskCvvValue));
+                    }
+
+                    // 'for' only used to ensure that there will not be an infinite loop
+                    for(var i = 0; i < 99; i ++) {
+                        var matchCredentials = regexCredentials.exec(msg);
+                        if (!matchCredentials) {
+                            break;
+                        }
+                        var groups = matchCredentials;
+
+                        // 1986 magic number for debugging in production
+                        // used why number does not need escaping
+                        msg = msg.replace(groups[1]||groups[2]||groups[3], '1986');
+                    }
+
+                    event.Put("message",msg);
+                }
       fields:
         logzio_codec: ${LOGZIO_CODEC}
         token: ${LOGZIO_LOGS_SHIPPING_TOKEN}
